--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <body>
 
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
+<p>Mukesh lodhi</p>
+
 
 </body>
 </html>
